feat: add hidden JS

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
     <p id="demo"></p>
 
     <script>
-        // Set the date we're counting down to
+        // Set default date we're counting down to
         var countDownDate = new Date("Jan 5, 2021 15:37:25").getTime();
+
+        const url_string = window.location.search;
+        console.log(url_string);
+        if (url_string != "") {
+            const urlParams = new URLSearchParams(url_string);
+            const mvmParam = urlParams.get('MVM')
+            if (mvmParam == "arriveeAMarseille") {
+                var countDownDate = new Date("Dec 18, 2020 17:15:00").getTime();
+            }
+        }
 
         // Update the count down every 1 second
         var x = setInterval(function () {
