--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
             // Output the result in an element with id="countdown"
-            document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+            document.getElementById("countdown").innerHTML = days + "j " + hours + "h "
                 + minutes + "m " + seconds + "s ";
 
             // If the count down is over, write some text 
