Change countdown date

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         console.log(url_string);
         if (url_string != "") {
             const urlParams = new URLSearchParams(url_string);
-            const asParam = urlParams.get('AS')
-            if (asParam == "vol") {
-                countDownDate = new Date("Feb 12, 2021 17:50:00").getTime();
+            const mvmParam = urlParams.get('MVM')
+            if (mvmParam == "arriveeANice") {
+                var countDownDate = new Date("Aug 12, 2021 23:55:00").getTime();
             }
         }
 
