Add support for setting date through URL parameters

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <span id="countdownTitle"></span>
     <div id="countdownValue"></div>
+    <div id="countdownTime"></div>
     <script type="text/javascript" src="logic.js"></script>
 </body>
 
