Add toggle button

--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <span id="countdownTitle"></span>
-    <div id="countdownValue"></div>
-    <div id="countdownTime"></div>
-    <script type="text/javascript" src="logic.js"></script>
+  <div class="info-toggle-container">
+    <label class="info-toggle">
+      <input type="checkbox" />
+      <div></div>
+    </label>
+    <span class="info-toggle-text-label">
+      More information
+    </span>
+  </div>
 </body>
 
 </html>
