Refactor query selectors

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       More information
     </span>
   </div>
+
+  <div class="main-scene">
+    <span class="countdownTitle"></span>
+    <div class="countdownValue"></div>
+    <div class="countdownTime" style="visibility: hidden;"></div>
+  </div>
+
+  <script type="text/javascript" src="logic.js"></script>
 </body>
 
 </html>
