Better hiding the additional info

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="main-scene">
     <span class="countdownTitle"></span>
     <div class="countdownValue"></div>
-    <div class="countdownTime" style="visibility: hidden;"></div>
+    <div class="countdownTime" style="display: none;"></div>
   </div>
 
   <script type="text/javascript" src="logic.js"></script>
