Display countdown time in a grid for better responsiveness

--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
     </span>
   </div>
 
-  <div class="main-scene">
-    <span class="countdownTitle"></span>
-    <div class="countdownValue"></div>
+  <div class="countdown">
+    <div class="countdownTitle"></div>
+    <div class="countdownValue">
+      <ul>
+        <li><span id="days"></span>Days</li>
+        <li><span id="hours"></span>Hours</li>
+        <li><span id="minutes"></span>Minutes</li>
+        <li><span id="seconds"></span>Seconds</li>
+      </ul>
+    </div>
     <div class="countdownTime" style="display: none;"></div>
   </div>
 
